# libraries

./: CMakeLists.txt  iwyu.imp
.github/workflows/: lint.yml  package.yml  test.yml
365compat/: CMakeLists.txt  sceKernelCpuUnrestrictedMemcpy.c
cmake/: InstallStubs.cmake
include/common/: appmgr.h  ctrl.h  display.h  power.h
include/common/kernel/: cpu.h  dmacmgr.h  iofilemgr.h  iofilemgr_async.h  iofilemgr_dirent.h  iofilemgr_stat.h  process_param.h  threadmgr.h
include/common/kernel/iofilemgr/: stat.h
include/common/kernel/sysmem/: memblock.h
include/kernel/: appmgr.h  audioout.h  bt.h  clockgen.h  ctrl.h  display.h  fios2.h  idstorage.h  npdrm.h  power.h  registrymgr.h  sblacmgr.h  sblaimgr.h  sblauthmgr.h  scejpegenc.h  syscon.h  uart.h  udcd.h  usbd.h
include/kernel/io/: devctl.h
include/kernel/kernel/: cpu.h  dmac.h  excpmgr.h  intrmgr.h  iofilemgr.h  iofilemgr_async.h  iofilemgr_dirent.h  iofilemgr_stat.h  modulemgr.h  proc_event.h  processmgr.h  suspend.h  sysclib.h  sysmem.h  threadmgr.h  utils.h
include/kernel/kernel/iofilemgr/: async.h  dirent.h  stat.h
include/kernel/kernel/sysmem/: debug.h  memblock.h  sysroot.h
include/kernel/lowio/: dsi.h  gpio.h  i2c.h  iftu.h  pervasive.h
include/kernel/net/: net.h
include/user/: appmgr.h  audiocodec.h  audiodec.h  audioenc.h  avcdec.h  avconfig.h  bgapputil.h  compat.h  ctrl.h  display.h  gim.h  gpu_es4.h  gxm.h  hid.h  incoming_dialog.h  ini_file_processor.h  jpegarm.h  libsysmodule.h  motion.h  mtpif.h  notification_util.h  np.h  npdrm.h  npdrmpackage.h  paf.h  power.h  promoterutil.h  pss.h  registrymgr.h  sas.h  sblacmgr.h  sblupdatemgr.h  shacccg.h  sharedfb.h  shellsvc.h  shellutil.h  sysmodule.h  trigger_util.h  udcd.h  usbd.h  (+5 more)
include/user/gpu_es4/: error.h  services.h
include/user/gxm/: context.h  init.h  internal.h  memory.h  render_target.h  shader_patcher.h  sync_object.h
include/user/io/: devctl.h
include/user/kernel/: clib.h  dmac.h  iofilemgr.h  iofilemgr_async.h  iofilemgr_dirent.h  iofilemgr_stat.h  iofilemgr_syscall.h  libkernel.h  modulemgr.h  processmgr.h  rng.h  sysmem.h  threadmgr.h
include/user/kernel/iofilemgr/: async.h  dirent.h  stat.h  syscall.h
include/user/kernel/sysmem/: memblock.h
include/user/net/: net_syscalls.h
include/user/np/: np_common.h  np_common_ps4.h  np_kdc.h  np_webapi.h
include/user/paf/: common.h  graphics.h  lowlayer.h  misc.h  resource.h  stdc.h  thread.h  toplevel.h  widget.h
include/user/shacccg/: paramquery.h  types.h
nids/: SceLibMono.yml  SceLibMonoBridge.yml  SceShaccCg.yml  libScePiglet.yml
nids/360/: SceAVConfig.yml  SceAppMgr.yml  SceAppMgrUser.yml  SceAppUtil.yml  SceAppUtilExt.yml  SceAtrac.yml  SceAudio.yml  SceAudioIn.yml  SceAudiocodec.yml  SceAudiodec.yml  SceAudiodecUser.yml  SceAudioenc.yml  SceAudioencUser.yml  SceAudioin.yml  SceAvPlayer.yml  SceAvcodec.yml  SceAvcodecUser.yml  SceBbmc.yml  SceBeisobmf.yml  SceBemp2sys.yml  SceBgAppUtil.yml  SceBt.yml  SceCamera.yml  SceClipboard.yml  SceClockgen.yml  SceCodecEngine.yml  SceCodecEngineWrapper.yml  SceCompat.yml  SceCoredump.yml  SceCtrl.yml  SceDbg.yml  SceDisplay.yml  SceDisplayUser.yml  SceDriverUser.yml  SceError.yml  SceExcpmgr.yml  SceFiber.yml  SceFios2.yml  SceFios2Kernel.yml  SceGameUpdate.yml  (+128 more)
nids/365/: SceExcpmgr.yml  SceKernelModulemgr.yml  SceKernelThreadMgr.yml  SceProcessmgr.yml  SceSysmem.yml
patches/: egl-registry.patch
scripts/: check-header-files.py  gen-test-compile.py  nids-check-digest.py  nids-check-dupe.py  nids-check-sort.py  nids-check-split.py  nids.py
